--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "ethers": "^6.15.0",
     "next": "15.5.0",
     "process": "^0.11.10",
     "react": "19.1.0",
